[gd_scene load_steps=5 format=3 uid="uid://bpjjmgsri0bfh"]

[ext_resource type="Script" path="res://Scripts/siren.gd" id="1_006ie"]
[ext_resource type="Texture2D" uid="uid://2lo0xbg0218w" path="res://Assets/Sprites/siren.png" id="1_v88nj"]
[ext_resource type="Texture2D" uid="uid://b32mec3wbctjv" path="res://Assets/Sprites/directional_light.png" id="2_rnict"]
[ext_resource type="AudioStream" uid="uid://ckq1lu2nsslrh" path="res://Assets/Sounds/DS_MTH_fx_one_shot_alarm.wav" id="4_1gb28"]

[node name="Siren" type="StaticBody2D" groups=["siren"]]
collision_layer = 128
collision_mask = 21
script = ExtResource("1_006ie")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v88nj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(7, 8, -7, 8, -7, 3, -6, 3, -6, 0, -5, 0, -5, -3, -4, -3, -4, -6, -3, -6, -3, -7, 3, -7, 3, -6, 4, -6, 4, -3, 5, -3, 5, 0, 6, 0, 6, 3, 7, 3)

[node name="Lights" type="Node2D" parent="."]

[node name="TopLight" type="PointLight2D" parent="Lights"]
rotation = 3.14159
color = Color(1, 0, 0, 1)
energy = 6.5
texture = ExtResource("2_rnict")
offset = Vector2(0, 32)

[node name="BottomLight" type="PointLight2D" parent="Lights"]
rotation = 3.14159
color = Color(1, 0, 0, 1)
energy = 6.5
texture = ExtResource("2_rnict")
offset = Vector2(0, 32)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_1gb28")
volume_db = -9.0
pitch_scale = 0.7
autoplay = true

[node name="LifeSpan" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="LifeSpan" to="." method="_on_life_span_timeout"]
